@@ -27,6 +27,8 @@ next version - not yet released
           MP4/MOV source filter
  FIXED  : Ticket #384, disable Relative drive
  FIXED  : Ticket #613, Bugs of MPC-HC Dialog Fonts
+ FIXED  : Ticket #622, Favorites are now correctly saved when changing settings
+          location from registry to ini and vice versa.
  FIXED  : Ticket #640, Source tree refactoring
  FIXED  : Ticket #740, Make EVR Sync stats better looking
  FIXED  : Ticket #760, Fixed playback of old movs with 'raw', 'twos' and 'ima4' audio
